# XCS224R_A3

./: install.sh  meta.json  points.json  pyproject.toml  requirements.cuda.txt  requirements.txt
src/: environment.yml  environment_cuda.yml
src/submission/: read_results.py  run_cql.py  run_iql.py
src/submission/data/hw3_cql_alpha_0.0_rnd_PointmassHard-v0_30-06-2026_16-24-13/: events.out.tfevents.1782829453.Mac.home.28205.0
src/submission/data/hw3_cql_alpha_0.1_random_PointmassHard-v0_30-06-2026_17-04-45/: events.out.tfevents.1782831885.Mac.home.29498.0
src/submission/data/hw3_cql_alpha_0.1_rnd_PointmassHard-v0_30-06-2026_16-50-25/: events.out.tfevents.1782831025.Mac.home.28842.0
src/submission/data/hw3_iql_zeta_0.2_rnd_PointmassEasy-v0_30-06-2026_10-28-02/: events.out.tfevents.1782808082.Mac.home.22713.0
src/submission/data/hw3_iql_zeta_0.9_random_PointmassMedium-v0_30-06-2026_14-36-08/: events.out.tfevents.1782822968.Mac.home.26418.0
src/submission/data/hw3_iql_zeta_0.9_rnd_PointmassEasy-v0_30-06-2026_10-57-20/: events.out.tfevents.1782809840.Mac.home.23870.0
src/submission/data/hw3_iql_zeta_0.9_rnd_PointmassMedium-v0_30-06-2026_14-08-36/: events.out.tfevents.1782821316.Mac.home.25764.0
src/submission/xcs224r/agents/: ac_agent.py  base_agent.py  dqn_agent.py  explore_or_exploit_agent.py  iql_agent.py
src/submission/xcs224r/critics/: base_critic.py  bootstrapped_continuous_critic.py  cql_critic.py  dqn_critic.py  iql_critic.py
tex/: macros.tex  submission.tex
tex/00-instructions/: 04-autograder.pytex
tex/01-implicit-q-learning/: 03-compare.pytex
(+15 files in other folders)
