[project]
name = "xcs224r"
version = "0.1.0"
description = "Deep reinforcement learning course environment"
requires-python = ">=3.12"
dependencies = [
    "pip==26.0.1",
    "ipython==9.7.0",
    "matplotlib==3.10.8",
    "moviepy==1.0.3",
    "tensorboard==2.20.0",
    "ffmpeg==1.4",
    "protobuf==6.33.5",
    "pyvirtualdisplay==3.0",
    "networkx==3.6.1",
    "ipdb==0.13.13",
    "scipy==1.17.1",
    "gymnasium[mujoco]==1.3.0",
    "tensorflow==2.21.0",
    "numpy==2.4.4",
    "opencv-python==4.13.0.92",
    "swig==4.4.1",
    "dm_control==1.0.40",
    "hydra-core==1.3.2",
    "hydra-submitit-launcher==1.2.0",
    "metaworld==3.0.0"
]
